# neo-market-B2B

./: .gitignore  Makefile  README.md  docker-compose.yml
B2B/: Dockerfile  Makefile  README.md  pyproject.toml
B2B/app/categories/: __init__.py  apps.py
B2B/app/categories/migrations/: 0001_initial.py
B2B/app/categories/models/: __init__.py  categories.py
B2B/app/common/: authentication.py  permissions.py
B2B/app/common/api/: exceptions.py
B2B/app/invoices/: __init__.py  apps.py  errors.py  services.py
B2B/app/invoices/api/: controller.py  serializers.py  urls.py
B2B/app/invoices/migrations/: 0001_initial.py  0002_invoice_status_created_invoiceitem.py
B2B/app/invoices/models/: __init__.py  invoice_status.py  invoices.py
B2B/app/products/: __init__.py  apps.py
B2B/app/products/api/: controller.py  serializers.py  urls.py
B2B/app/products/errors/: product_already_deleted_error.py  product_delete_error.py  product_hard_blocked_error.py  product_not_found_error.py  product_not_owner_error.py
B2B/app/products/integration/: b2c_events.py  product_events.py
B2B/app/products/migrations/: 0001_initial.py  0002_alter_product_status_and_more.py  0003_product_blocking_reason_title_productfieldreport.py  0004_processedmoderationevent.py
B2B/app/sellers/: __init__.py  apps.py
B2B/app/sellers/models/: sellers.py  (+1 more)
B2B/app/skus/: __init__.py  apps.py
B2B/config/: settings.py  test_settings.py  urls.py
B2B/tests/common/: test_authentication.py
B2B/tests/factories/: category_factory.py  seller_factory.py
B2B/tests/invoices/: test_create_invoice_api.py
(+61 files in other folders)
